# rust-faiss

./: .gitignore  Cargo.toml  README.md  build.rs
cpp/: demo_imi_flat.cpp
src/: index_ivf.rs  index_ivf_flat.rs  index_ivf_hnsw.rs  index_ivf_pq.rs  lib.rs
