[package]
name = "faiss4rs"
description = "Rust wrapper for Facebook's faiss"
version = "0.1.0"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["faiss", "vector", "simarly", "ai"]
homepage = "https://github.com/ansj-sun/rust-faiss"


[dependencies]
cpp = { git = "https://github.com/mystor/rust-cpp" }

[dev-dependencies]
rand = "0.7.3"


[build-dependencies]
cpp_build = { git = "https://github.com/mystor/rust-cpp" }


