[package]
name = "faiss4rs"
description = "Rust wrapper for Facebook's faiss"
version = "1.6.303"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["faiss", "vector", "simarly", "ai"]
homepage = "https://github.com/ansjsun/rust-faiss"

[dependencies]
cpp = "0.5.4"

[dev-dependencies]
rand = "0.7.3"

[build-dependencies]
cpp_build = "0.5.4"
